--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndConds/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndConds/policies.yaml
@@ -2,8 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (*) dst: (tag = Slytherin and tag != DB) conn: All Connections'
-        nsx-id: "1925"
+        description: 'src: (tag = Gryffindor) dst: (tag = Slytherin and tag != DB) conn: All Connections'
+        nsx-id: "1926"
     creationTimestamp: null
     name: policy-0
     namespace: default
@@ -13,6 +13,31 @@ spec:
             - podSelector:
                 matchExpressions:
                     - key: tag__Slytherin
+                      operator: Exists
+                    - key: tag__DB
+                      operator: DoesNotExist
+    podSelector:
+        matchExpressions:
+            - key: tag__Gryffindor
+              operator: Exists
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
+        description: 'src: (*) dst: (tag = Hufflepuff and tag != DB) conn: All Connections'
+        nsx-id: "1928"
+    creationTimestamp: null
+    name: policy-1
+    namespace: default
+spec:
+    egress:
+        - to:
+            - podSelector:
+                matchExpressions:
+                    - key: tag__Hufflepuff
                       operator: Exists
                     - key: tag__DB
                       operator: DoesNotExist
@@ -27,7 +52,7 @@ metadata:
         description: 'src: (*) dst: (tag = Slytherin and tag != DB) conn: All Connections'
         nsx-id: "1925"
     creationTimestamp: null
-    name: policy-1
+    name: policy-2
     namespace: default
 spec:
     ingress:
@@ -47,29 +72,7 @@ kind: NetworkPolicy
 metadata:
     annotations:
         description: 'src: (*) dst: (tag = Gryffindor and tag != DB) conn: All Connections'
-        nsx-id: "1926"
-    creationTimestamp: null
-    name: policy-2
-    namespace: default
-spec:
-    egress:
-        - to:
-            - podSelector:
-                matchExpressions:
-                    - key: tag__Gryffindor
-                      operator: Exists
-                    - key: tag__DB
-                      operator: DoesNotExist
-    podSelector: {}
-    policyTypes:
-        - Egress
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-    annotations:
-        description: 'src: (*) dst: (tag = Gryffindor and tag != DB) conn: All Connections'
-        nsx-id: "1926"
+        nsx-id: "1927"
     creationTimestamp: null
     name: policy-3
     namespace: default
@@ -80,50 +83,6 @@ spec:
     podSelector:
         matchExpressions:
             - key: tag__Gryffindor
-              operator: Exists
-            - key: tag__DB
-              operator: DoesNotExist
-    policyTypes:
-        - Ingress
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-    annotations:
-        description: 'src: (*) dst: (tag = Hufflepuff and tag != DB) conn: All Connections'
-        nsx-id: "1927"
-    creationTimestamp: null
-    name: policy-4
-    namespace: default
-spec:
-    egress:
-        - to:
-            - podSelector:
-                matchExpressions:
-                    - key: tag__Hufflepuff
-                      operator: Exists
-                    - key: tag__DB
-                      operator: DoesNotExist
-    podSelector: {}
-    policyTypes:
-        - Egress
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-    annotations:
-        description: 'src: (*) dst: (tag = Hufflepuff and tag != DB) conn: All Connections'
-        nsx-id: "1927"
-    creationTimestamp: null
-    name: policy-5
-    namespace: default
-spec:
-    ingress:
-        - from:
-            - podSelector: {}
-    podSelector:
-        matchExpressions:
-            - key: tag__Hufflepuff
               operator: Exists
             - key: tag__DB
               operator: DoesNotExist
