--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprOrConds/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprOrConds/policies.yaml
@@ -8,46 +8,6 @@ metadata:
     name: policy-0
     namespace: default
 spec:
-    egress:
-        - to:
-            - podSelector:
-                matchExpressions:
-                    - key: tag__Slytherin
-                      operator: Exists
-    podSelector: {}
-    policyTypes:
-        - Egress
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-    annotations:
-        description: 'src: (*) dst: (tag != DB) conn: All Connections'
-        nsx-id: "1925"
-    creationTimestamp: null
-    name: policy-1
-    namespace: default
-spec:
-    egress:
-        - to:
-            - podSelector:
-                matchExpressions:
-                    - key: tag__DB
-                      operator: DoesNotExist
-    podSelector: {}
-    policyTypes:
-        - Egress
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-    annotations:
-        description: 'src: (*) dst: (tag = Slytherin) conn: All Connections'
-        nsx-id: "1925"
-    creationTimestamp: null
-    name: policy-2
-    namespace: default
-spec:
     ingress:
         - from:
             - podSelector: {}
@@ -64,6 +24,46 @@ metadata:
     annotations:
         description: 'src: (*) dst: (tag != DB) conn: All Connections'
         nsx-id: "1925"
+    creationTimestamp: null
+    name: policy-1
+    namespace: default
+spec:
+    ingress:
+        - from:
+            - podSelector: {}
+    podSelector:
+        matchExpressions:
+            - key: tag__DB
+              operator: DoesNotExist
+    policyTypes:
+        - Ingress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
+        description: 'src: (*) dst: (tag = Gryffindor) conn: All Connections'
+        nsx-id: "1927"
+    creationTimestamp: null
+    name: policy-2
+    namespace: default
+spec:
+    ingress:
+        - from:
+            - podSelector: {}
+    podSelector:
+        matchExpressions:
+            - key: tag__Gryffindor
+              operator: Exists
+    policyTypes:
+        - Ingress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
+        description: 'src: (*) dst: (tag != DB) conn: All Connections'
+        nsx-id: "1927"
     creationTimestamp: null
     name: policy-3
     namespace: default
@@ -82,7 +82,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (*) dst: (tag = Gryffindor) conn: All Connections'
+        description: 'src: (tag = Gryffindor) dst: (tag = Slytherin) conn: All Connections'
         nsx-id: "1926"
     creationTimestamp: null
     name: policy-4
@@ -92,9 +92,12 @@ spec:
         - to:
             - podSelector:
                 matchExpressions:
-                    - key: tag__Gryffindor
+                    - key: tag__Slytherin
                       operator: Exists
-    podSelector: {}
+    podSelector:
+        matchExpressions:
+            - key: tag__Gryffindor
+              operator: Exists
     policyTypes:
         - Egress
 ---
@@ -102,7 +105,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (*) dst: (tag != DB) conn: All Connections'
+        description: 'src: (tag = Gryffindor) dst: (tag != DB) conn: All Connections'
         nsx-id: "1926"
     creationTimestamp: null
     name: policy-5
@@ -114,7 +117,10 @@ spec:
                 matchExpressions:
                     - key: tag__DB
                       operator: DoesNotExist
-    podSelector: {}
+    podSelector:
+        matchExpressions:
+            - key: tag__Gryffindor
+              operator: Exists
     policyTypes:
         - Egress
 ---
@@ -122,50 +128,10 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (*) dst: (tag = Gryffindor) conn: All Connections'
-        nsx-id: "1926"
+        description: 'src: (*) dst: (tag = Hufflepuff) conn: All Connections'
+        nsx-id: "1928"
     creationTimestamp: null
     name: policy-6
-    namespace: default
-spec:
-    ingress:
-        - from:
-            - podSelector: {}
-    podSelector:
-        matchExpressions:
-            - key: tag__Gryffindor
-              operator: Exists
-    policyTypes:
-        - Ingress
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-    annotations:
-        description: 'src: (*) dst: (tag != DB) conn: All Connections'
-        nsx-id: "1926"
-    creationTimestamp: null
-    name: policy-7
-    namespace: default
-spec:
-    ingress:
-        - from:
-            - podSelector: {}
-    podSelector:
-        matchExpressions:
-            - key: tag__DB
-              operator: DoesNotExist
-    policyTypes:
-        - Ingress
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-    annotations:
-        description: 'src: (*) dst: (tag = Hufflepuff) conn: All Connections'
-        nsx-id: "1927"
-    creationTimestamp: null
-    name: policy-8
     namespace: default
 spec:
     egress:
@@ -183,9 +149,9 @@ kind: NetworkPolicy
 metadata:
     annotations:
         description: 'src: (*) dst: (tag != DB) conn: All Connections'
-        nsx-id: "1927"
+        nsx-id: "1928"
     creationTimestamp: null
-    name: policy-9
+    name: policy-7
     namespace: default
 spec:
     egress:
@@ -197,46 +163,6 @@ spec:
     podSelector: {}
     policyTypes:
         - Egress
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-    annotations:
-        description: 'src: (*) dst: (tag = Hufflepuff) conn: All Connections'
-        nsx-id: "1927"
-    creationTimestamp: null
-    name: policy-10
-    namespace: default
-spec:
-    ingress:
-        - from:
-            - podSelector: {}
-    podSelector:
-        matchExpressions:
-            - key: tag__Hufflepuff
-              operator: Exists
-    policyTypes:
-        - Ingress
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-    annotations:
-        description: 'src: (*) dst: (tag != DB) conn: All Connections'
-        nsx-id: "1927"
-    creationTimestamp: null
-    name: policy-11
-    namespace: default
-spec:
-    ingress:
-        - from:
-            - podSelector: {}
-    podSelector:
-        matchExpressions:
-            - key: tag__DB
-              operator: DoesNotExist
-    policyTypes:
-        - Ingress
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
