--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsAdmin_AdminPoliciesEnabled/adminPolicies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsAdmin_AdminPoliciesEnabled/adminPolicies.yaml
@@ -2,7 +2,7 @@ apiVersion: policy.networking.k8s.io/v1alpha1
 kind: AdminNetworkPolicy
 metadata:
     annotations:
-        description: '(jump_to_application: (src: (group = Gryffindor) dst: (group = Gryffindor) conn: All Connections)'
+        description: '(jump_to_application: (src: (group = Gryffindor) dst: (group = Gryffindor) conn: TCP)'
         nsx-id: "10218"
     creationTimestamp: null
     name: admin-policy-0
@@ -10,7 +10,11 @@ metadata:
 spec:
     egress:
         - action: Pass
-          ports: null
+          ports:
+            - portRange:
+                end: 65535
+                protocol: TCP
+                start: 1
           to:
             - pods:
                 namespaceSelector: {}
@@ -33,7 +37,7 @@ apiVersion: policy.networking.k8s.io/v1alpha1
 kind: AdminNetworkPolicy
 metadata:
     annotations:
-        description: '(jump_to_application: (src: (group = Gryffindor) dst: (group = Gryffindor) conn: All Connections)'
+        description: '(jump_to_application: (src: (group = Gryffindor) dst: (group = Gryffindor) conn: TCP)'
         nsx-id: "10218"
     creationTimestamp: null
     name: admin-policy-1
@@ -48,7 +52,11 @@ spec:
                     matchExpressions:
                         - key: group__Gryffindor
                           operator: Exists
-          ports: null
+          ports:
+            - portRange:
+                end: 65535
+                protocol: TCP
+                start: 1
     priority: 2
     subject:
         pods:
@@ -64,41 +72,10 @@ apiVersion: policy.networking.k8s.io/v1alpha1
 kind: AdminNetworkPolicy
 metadata:
     annotations:
-        description: '(jump_to_application: (src: (group = Hufflepuff) dst: (group = Hufflepuff) conn: All Connections)'
+        description: '(jump_to_application: (src: (group = Hufflepuff) dst: (group = Hufflepuff) conn: UDP dst-ports: 300-320)'
         nsx-id: "10219"
     creationTimestamp: null
     name: admin-policy-2
-    namespace: default
-spec:
-    egress:
-        - action: Pass
-          ports: null
-          to:
-            - pods:
-                namespaceSelector: {}
-                podSelector:
-                    matchExpressions:
-                        - key: group__Hufflepuff
-                          operator: Exists
-    priority: 3
-    subject:
-        pods:
-            namespaceSelector: {}
-            podSelector:
-                matchExpressions:
-                    - key: group__Hufflepuff
-                      operator: Exists
-status:
-    conditions: null
----
-apiVersion: policy.networking.k8s.io/v1alpha1
-kind: AdminNetworkPolicy
-metadata:
-    annotations:
-        description: '(jump_to_application: (src: (group = Hufflepuff) dst: (group = Hufflepuff) conn: All Connections)'
-        nsx-id: "10219"
-    creationTimestamp: null
-    name: admin-policy-3
     namespace: default
 spec:
     ingress:
@@ -110,8 +87,12 @@ spec:
                     matchExpressions:
                         - key: group__Hufflepuff
                           operator: Exists
-          ports: null
-    priority: 4
+          ports:
+            - portRange:
+                end: 320
+                protocol: UDP
+                start: 300
+    priority: 3
     subject:
         pods:
             namespaceSelector: {}
@@ -129,7 +110,7 @@ metadata:
         description: '(jump_to_application: (src: (group = Slytherin) dst: (group = Slytherin) conn: All Connections)'
         nsx-id: "10220"
     creationTimestamp: null
-    name: admin-policy-4
+    name: admin-policy-3
     namespace: default
 spec:
     egress:
@@ -142,7 +123,7 @@ spec:
                     matchExpressions:
                         - key: group__Slytherin
                           operator: Exists
-    priority: 5
+    priority: 4
     subject:
         pods:
             namespaceSelector: {}
@@ -160,7 +141,7 @@ metadata:
         description: '(jump_to_application: (src: (group = Slytherin) dst: (group = Slytherin) conn: All Connections)'
         nsx-id: "10220"
     creationTimestamp: null
-    name: admin-policy-5
+    name: admin-policy-4
     namespace: default
 spec:
     ingress:
@@ -173,7 +154,7 @@ spec:
                         - key: group__Slytherin
                           operator: Exists
           ports: null
-    priority: 6
+    priority: 5
     subject:
         pods:
             namespaceSelector: {}
@@ -191,7 +172,7 @@ metadata:
         description: '(jump_to_application: (src: (group = Dumbledore) dst: (group = Gryffindor) conn: All Connections)'
         nsx-id: "10221"
     creationTimestamp: null
-    name: admin-policy-6
+    name: admin-policy-5
     namespace: default
 spec:
     egress:
@@ -204,7 +185,7 @@ spec:
                     matchExpressions:
                         - key: group__Gryffindor
                           operator: Exists
-    priority: 7
+    priority: 6
     subject:
         pods:
             namespaceSelector: {}
@@ -222,7 +203,7 @@ metadata:
         description: '(jump_to_application: (src: (group = Dumbledore) dst: (group = Gryffindor) conn: All Connections)'
         nsx-id: "10221"
     creationTimestamp: null
-    name: admin-policy-7
+    name: admin-policy-6
     namespace: default
 spec:
     ingress:
@@ -235,7 +216,7 @@ spec:
                         - key: group__Dumbledore
                           operator: Exists
           ports: null
-    priority: 8
+    priority: 7
     subject:
         pods:
             namespaceSelector: {}
@@ -253,7 +234,7 @@ metadata:
         description: '(deny: (src: (*) dst: (*) conn: All Connections)'
         nsx-id: "10300"
     creationTimestamp: null
-    name: admin-policy-8
+    name: admin-policy-7
     namespace: default
 spec:
     egress:
@@ -263,7 +244,7 @@ spec:
             - pods:
                 namespaceSelector: {}
                 podSelector: {}
-    priority: 9
+    priority: 8
     subject:
         pods:
             namespaceSelector: {}
@@ -278,7 +259,7 @@ metadata:
         description: '(deny: (src: (*) dst: (*) conn: All Connections)'
         nsx-id: "10300"
     creationTimestamp: null
-    name: admin-policy-9
+    name: admin-policy-8
     namespace: default
 spec:
     ingress:
@@ -288,7 +269,7 @@ spec:
                 namespaceSelector: {}
                 podSelector: {}
           ports: null
-    priority: 10
+    priority: 9
     subject:
         pods:
             namespaceSelector: {}
