--- a/.github/workflows/operator-build.yml
+++ b/.github/workflows/operator-build.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@f111f3307d8850f501ac008e886eec1fd1932a34
       with:
-        go-version-file: .operator/go.mod
+        go-version-file: ./operator/go.mod
 
     - name: Build
       run: make build-operator
