--- a/pkg/synthesis/tests_expected_output/k8s_resources/Example1External_NoHint/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/Example1External_NoHint/policies.yaml
@@ -25,6 +25,106 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
+        description: 'src: (IP addr in 1.2.0.0-1.2.1.255) dst: (group = frontend) conn: TCP'
+        nsx-id: "1004"
+    creationTimestamp: null
+    name: policy-1
+    namespace: default
+spec:
+    egress:
+        - ports:
+            - protocol: TCP
+          to:
+            - podSelector:
+                matchExpressions:
+                    - key: group__frontend
+                      operator: Exists
+    podSelector:
+        matchExpressions:
+            - key: to-NLCimplement
+              operator: Exists
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
+        description: 'src: (IP addr in 1.2.0.0-1.2.1.255) dst: (group = frontend) conn: TCP'
+        nsx-id: "1004"
+    creationTimestamp: null
+    name: policy-2
+    namespace: default
+spec:
+    ingress:
+        - from:
+            - podSelector:
+                matchExpressions:
+                    - key: to-NLCimplement
+                      operator: Exists
+          ports:
+            - protocol: TCP
+    podSelector:
+        matchExpressions:
+            - key: group__frontend
+              operator: Exists
+    policyTypes:
+        - Ingress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
+        description: 'src: (IP addr in 1.2.3.0-1.2.4.255) dst: (group = frontend) conn: UDP'
+        nsx-id: "1005"
+    creationTimestamp: null
+    name: policy-3
+    namespace: default
+spec:
+    egress:
+        - ports:
+            - protocol: UDP
+          to:
+            - podSelector:
+                matchExpressions:
+                    - key: group__frontend
+                      operator: Exists
+    podSelector:
+        matchExpressions:
+            - key: to-NLCimplement
+              operator: Exists
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
+        description: 'src: (IP addr in 1.2.3.0-1.2.4.255) dst: (group = frontend) conn: UDP'
+        nsx-id: "1005"
+    creationTimestamp: null
+    name: policy-4
+    namespace: default
+spec:
+    ingress:
+        - from:
+            - podSelector:
+                matchExpressions:
+                    - key: to-NLCimplement
+                      operator: Exists
+          ports:
+            - protocol: UDP
+    podSelector:
+        matchExpressions:
+            - key: group__frontend
+              operator: Exists
+    policyTypes:
+        - Ingress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
         description: Default Deny Network Policy
         nsx-id: "1003"
     creationTimestamp: null
