--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllow/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllow/policies.yaml
@@ -48,10 +48,32 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (IP addr in 10.0.0.4/30, 10.0.0.8/29, 10.0.0.16/28, 10.0.0.32/27, 10.0.0.64/27, 10.0.0.96/30, 10.0.0.102/31, 10.0.0.104/29, 10.0.0.112/28, 10.0.0.128/25) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
+        description: 'dup of src: (VMs within IPs 10.0.0.0/24 and VMs not within IPs 10.0.0.0/30) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "1005"
     creationTimestamp: null
     name: policy-2
+    namespace: default
+spec:
+    egress:
+        - to:
+            - podSelector: {}
+    podSelector:
+        matchExpressions:
+            - key: VMs_within_IPs__10.0.0.0-24
+              operator: Exists
+            - key: VMs_within_IPs__10.0.0.0-30
+              operator: DoesNotExist
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
+        description: 'src: (IP addr in 10.0.0.4/30, 10.0.0.8/29, 10.0.0.16/28, 10.0.0.32/27, 10.0.0.64/27, 10.0.0.96/30, 10.0.0.102/31, 10.0.0.104/29, 10.0.0.112/28, 10.0.0.128/25) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
+        nsx-id: "1005"
+    creationTimestamp: null
+    name: policy-3
     namespace: default
 spec:
     ingress:
@@ -87,7 +109,7 @@ metadata:
         description: 'src: (VMs within IPs 10.0.0.0/24 and VMs not within IPs 10.0.0.0/30) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "1005"
     creationTimestamp: null
-    name: policy-3
+    name: policy-4
     namespace: default
 spec:
     ingress:
@@ -109,7 +131,7 @@ metadata:
         description: 'src: (VMs within IPs 10.0.0.0/16 and VMs not within IPs 10.0.0.0/20) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "1007"
     creationTimestamp: null
-    name: policy-4
+    name: policy-5
     namespace: default
 spec:
     egress:
@@ -129,10 +151,32 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
+        description: 'dup of src: (VMs within IPs 10.0.0.0/16 and VMs not within IPs 10.0.0.0/20) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
+        nsx-id: "1007"
+    creationTimestamp: null
+    name: policy-6
+    namespace: default
+spec:
+    egress:
+        - to:
+            - podSelector: {}
+    podSelector:
+        matchExpressions:
+            - key: VMs_within_IPs__10.0.0.0-16
+              operator: Exists
+            - key: VMs_within_IPs__10.0.0.0-20
+              operator: DoesNotExist
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
         description: 'src: (IP addr in 10.0.16.0/20, 10.0.32.0/19, 10.0.64.0/18, 10.0.128.0/17) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "1007"
     creationTimestamp: null
-    name: policy-5
+    name: policy-7
     namespace: default
 spec:
     ingress:
@@ -156,7 +200,7 @@ metadata:
         description: 'src: (VMs within IPs 10.0.0.0/16 and VMs not within IPs 10.0.0.0/20) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "1007"
     creationTimestamp: null
-    name: policy-6
+    name: policy-8
     namespace: default
 spec:
     ingress:
@@ -178,7 +222,7 @@ metadata:
         description: 'src: (VMs within IPs 172.16.10.10/16) dst: (IP addr in 0.0.0.0/0 and group != real-group) conn: All Connections'
         nsx-id: "2000"
     creationTimestamp: null
-    name: policy-7
+    name: policy-9
     namespace: default
 spec:
     egress:
@@ -201,7 +245,7 @@ metadata:
         description: 'src: (IP addr in 172.16.10.10/16) dst: (IP addr in 0.0.0.0/0 and group != real-group) conn: All Connections'
         nsx-id: "2000"
     creationTimestamp: null
-    name: policy-8
+    name: policy-10
     namespace: default
 spec:
     ingress:
@@ -252,7 +296,7 @@ metadata:
         description: 'src: (VMs within IPs 172.16.10.10/16) dst: (IP addr in 0.0.0.0/0 and group != real-group) conn: All Connections'
         nsx-id: "2000"
     creationTimestamp: null
-    name: policy-9
+    name: policy-11
     namespace: default
 spec:
     ingress:
@@ -275,7 +319,7 @@ metadata:
         description: 'src: (VMs within IPs 192.168.0.0/16) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "3000"
     creationTimestamp: null
-    name: policy-10
+    name: policy-12
     namespace: default
 spec:
     egress:
@@ -293,10 +337,30 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
+        description: 'dup of src: (VMs within IPs 192.168.0.0/16) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
+        nsx-id: "3000"
+    creationTimestamp: null
+    name: policy-13
+    namespace: default
+spec:
+    egress:
+        - to:
+            - podSelector: {}
+    podSelector:
+        matchExpressions:
+            - key: VMs_within_IPs__192.168.0.0-16
+              operator: Exists
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
         description: 'src: (IP addr in 192.168.0.0/16) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "3000"
     creationTimestamp: null
-    name: policy-11
+    name: policy-14
     namespace: default
 spec:
     ingress:
@@ -372,7 +436,7 @@ metadata:
         description: 'src: (VMs within IPs 192.168.0.0/16) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "3000"
     creationTimestamp: null
-    name: policy-12
+    name: policy-15
     namespace: default
 spec:
     ingress:
@@ -392,7 +456,7 @@ metadata:
         description: 'src: (group = real-group and VMs not within IPs 10.0.0.0/20 and VMs not within IPs 172.16.10.10/16) dst: (group = real-group) conn: All Connections'
         nsx-id: "4008"
     creationTimestamp: null
-    name: policy-13
+    name: policy-16
     namespace: default
 spec:
     egress:
@@ -419,7 +483,7 @@ metadata:
         description: 'src: (group = real-group and VMs not within IPs 10.0.0.0/20 and VMs not within IPs 172.16.10.10/16) dst: (group = real-group) conn: All Connections'
         nsx-id: "4008"
     creationTimestamp: null
-    name: policy-14
+    name: policy-17
     namespace: default
 spec:
     ingress:
