--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllowWithSegments/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllowWithSegments/policies.yaml
@@ -48,10 +48,32 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (VMs within IPs 10.0.0.0/24 and VMs not within IPs 10.0.0.0/30) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
+        description: 'dup of src: (VMs within IPs 10.0.0.0/24 and VMs not within IPs 10.0.0.0/30) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "1005"
     creationTimestamp: null
     name: policy-2
+    namespace: default
+spec:
+    egress:
+        - to:
+            - podSelector: {}
+    podSelector:
+        matchExpressions:
+            - key: VMs_within_IPs__10.0.0.0-24
+              operator: Exists
+            - key: VMs_within_IPs__10.0.0.0-30
+              operator: DoesNotExist
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
+        description: 'src: (VMs within IPs 10.0.0.0/24 and VMs not within IPs 10.0.0.0/30) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
+        nsx-id: "1005"
+    creationTimestamp: null
+    name: policy-3
     namespace: default
 spec:
     ingress:
@@ -73,7 +95,7 @@ metadata:
         description: 'src: (VMs within IPs 10.0.0.0/16 and VMs not within IPs 10.0.0.0/20) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "1007"
     creationTimestamp: null
-    name: policy-3
+    name: policy-4
     namespace: default
 spec:
     egress:
@@ -93,10 +115,32 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
+        description: 'dup of src: (VMs within IPs 10.0.0.0/16 and VMs not within IPs 10.0.0.0/20) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
+        nsx-id: "1007"
+    creationTimestamp: null
+    name: policy-5
+    namespace: default
+spec:
+    egress:
+        - to:
+            - podSelector: {}
+    podSelector:
+        matchExpressions:
+            - key: VMs_within_IPs__10.0.0.0-16
+              operator: Exists
+            - key: VMs_within_IPs__10.0.0.0-20
+              operator: DoesNotExist
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
         description: 'src: (VMs within IPs 10.0.0.0/16 and VMs not within IPs 10.0.0.0/20) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "1007"
     creationTimestamp: null
-    name: policy-4
+    name: policy-6
     namespace: default
 spec:
     ingress:
@@ -118,7 +162,7 @@ metadata:
         description: 'src: (VMs within IPs 172.16.10.10/16) dst: (IP addr in 0.0.0.0/0 and group != real-group) conn: All Connections'
         nsx-id: "2000"
     creationTimestamp: null
-    name: policy-5
+    name: policy-7
     namespace: default
 spec:
     egress:
@@ -141,7 +185,7 @@ metadata:
         description: 'src: (VMs within IPs 172.16.10.10/16) dst: (IP addr in 0.0.0.0/0 and group != real-group) conn: All Connections'
         nsx-id: "2000"
     creationTimestamp: null
-    name: policy-6
+    name: policy-8
     namespace: default
 spec:
     ingress:
@@ -164,7 +208,7 @@ metadata:
         description: 'src: (VMs within IPs 192.168.0.0/16) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "3000"
     creationTimestamp: null
-    name: policy-7
+    name: policy-9
     namespace: default
 spec:
     egress:
@@ -182,10 +226,30 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
+        description: 'dup of src: (VMs within IPs 192.168.0.0/16) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
+        nsx-id: "3000"
+    creationTimestamp: null
+    name: policy-10
+    namespace: default
+spec:
+    egress:
+        - to:
+            - podSelector: {}
+    podSelector:
+        matchExpressions:
+            - key: VMs_within_IPs__192.168.0.0-16
+              operator: Exists
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
         description: 'src: (VMs within IPs 192.168.0.0/16) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "3000"
     creationTimestamp: null
-    name: policy-8
+    name: policy-11
     namespace: default
 spec:
     ingress:
@@ -205,7 +269,7 @@ metadata:
         description: 'src: (group = real-group and VMs not within IPs 10.0.0.0/20 and VMs not within IPs 172.16.10.10/16) dst: (group = real-group) conn: All Connections'
         nsx-id: "4008"
     creationTimestamp: null
-    name: policy-9
+    name: policy-12
     namespace: default
 spec:
     egress:
@@ -232,7 +296,7 @@ metadata:
         description: 'src: (group = real-group and VMs not within IPs 10.0.0.0/20 and VMs not within IPs 172.16.10.10/16) dst: (group = real-group) conn: All Connections'
         nsx-id: "4008"
     creationTimestamp: null
-    name: policy-10
+    name: policy-13
     namespace: default
 spec:
     ingress:
